--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -1,6 +1,6 @@
 
 .header{
-  background: #304156;
+  background: #001529;
   color: #fff;
   font-size: 16px;
   //padding: 10px 15px 5px 15px;
@@ -23,7 +23,7 @@
       content: '';
       left: 128px;
       top: 29px;
-      border: 10px solid #304156;
+      border: 10px solid #001529;
       border-right: 10px solid transparent;
       border-left: 10px solid transparent;
       border-bottom: 10px solid transparent;
@@ -32,7 +32,11 @@
   .weather{
     text-align: right;
     span{
-      margin: 0 10px;
+      margin: 0 5px;
+      img{
+        width: 30px;
+        vertical-align: top;
+      }
     }
   }
 
