--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,5 +1,6 @@
 /** 常用色值 **/
 /** 常用字体大小 **/
+@import "./../../style/default.less";
 .home-wrap {
   height: calc(72vh);
   background: #fff;
@@ -7,5 +8,6 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
+  color: #000;
 }
 /*# sourceMappingURL=index.css.map */
