--- a/src/style/common.less
+++ b/src/style/common.less
@@ -1,9 +1,7 @@
-
-@import "default";
+@import './default.less';
+//@import './loading.less';
 body {
   background: @colorL;
-  font-size: 14px;
-  color: #606266;
   font-family: "Helvetica Neue For Number", "PingFang SC Light", "Heiti SC", "San Francisco", "Helvetica", Arial, sans-serif;
 }
 ul,li{
@@ -15,5 +13,32 @@ ul,li{
     clear:both;
     display:block;
     visibility:hidden;
+  }
+}
+.container{
+    .nav-left{
+        background-color:#001529;
+        color: #ffffff;
+        height: calc(100vh);
+    }
+    .main{
+        height: calc(100vh);
+        background-color: @colorL;
+        overflow: auto;
+    }
+    .content{
+        position: relative;
+      background: #fff;
+        padding: 20px;
+    }
+}
+
+.content-wrap{
+  background: #ffffff;
+  border: 1px solid #e8e8e8;
+  margin-top: -3px;
+  .ant-table-wrapper{
+    margin-left: -1px;
+    margin-right: -2px;
   }
 }
