--- a/src/style/common.less
+++ b/src/style/common.less
@@ -37,6 +37,7 @@ ul,li{
   background: #ffffff;
   border: 1px solid #e8e8e8;
   margin-top: -3px;
+  margin-bottom: 10px;
   .ant-table-wrapper{
     margin-left: -1px;
     margin-right: -2px;
