--- a/src/pages/user/userlist.less
+++ b/src/pages/user/userlist.less
@@ -1,13 +1,26 @@
-.ant-form-item{
+.ant-form-item {
   margin-bottom: 5px;
 }
-.ant-form-item-children{
-  .account-detail{
+
+.ant-form-item-children {
+  .account-detail {
     border: none;
-    &:hover{
+
+    &:hover {
       border: none;
       outline: none;
     }
   }
 
+}
+
+.edit-input {
+  border: none;
+  outline: none;
+
+  &:focus {
+    border: none !important;
+    outline: none;
+    box-shadow: none;
+  }
 }
